style.css
/* ... */
          .lawyerist-star-rating .rating-star:last-child {
            padding: 0;
          }

        .lawyerist-star-rating .rating-star:before {
          color: #bbb;
          content: '\f005';
      		display: inline-block;
      		-webkit-font-smoothing: antialiased;
          font-family: FontAwesome;
          font-size: inherit;
          line-height: inherit;
          speak: none;
          vertical-align: top;
        }

        .lawyerist-star-rating-result {
          overflow: hidden;
          position: absolute;
            left: 0;
            top: 0;
          white-space: nowrap;
        }

          .lawyerist-star-rating-result .rating-star:before {
            color: #c00;
          }

    /* Displays the author review. */
    .rating-box {
      margin-bottom: 4rem;
      padding: 2rem;
    }

      #review {
        border: 0;
        padding: 0;
      }

      #review .review-list li {
        border-bottom: 0;
        margin-bottom: 1rem;
        padding: 0;
      }

      #review .review-list li:nth-child(2n) {
        background: unset;
      }

        #review .review-list li span {
          font-size: 1.6rem;
        }

      #review .comments-review-area {
        display: none;
      }

      .rating-breakdown {
        margin-bottom: 1em;
      }

        .rating {
          margin-bottom: 0;
        }

        .composite-rating {
          border-top: .1rem dotted #bbb;
          padding-top: 1rem;
        }

        .rating-breakdown small {
          color: #777;
          font-family: equity, serif;
        }

      .review-total-wrapper {
        display: none;
      }

    .review-total-only,
    .review-star {
      margin: 0;
      padding: 0;
    }

    .review-total-only {
      padding: 0 .25em 0 0 !important;
    }

    .review-star .review-result-wrapper {
      color: #bbb;
    }

    .review-point .review-result-wrapper {
      background-color: #bbb !important;
    }

    .wp-review-feedback {
      color: #777;
      font-size: 1.4rem;
      line-height: 1.5;
    }

    .wp-review-feedback a.review-btn {
      background: #bbb;
      border: none;
      border-radius: .2rem;
      color: #fff;
      height: auto;
      line-height: 2.1rem;
      margin-bottom: 0;
      padding: 0 .8rem;
    }

    .wp-review-feedback a.review-btn[data-value="yes"]:hover,
    .wp-review-feedback a.review-btn[data-value="no"]:hover {
      background: #ccc;
    }

    .wp-review-feedback a.review-btn[data-value="yes"]:active,
    .wp-review-feedback a.review-btn[data-value="no"]:active {
      background: #aaa;
      color: #e9e9e9;
    }

    form.wp-review-comment-form > div,
    #commentform.wp-review-comment-form > div {
      width: 100%;
      margin-bottom: 0;
      float: none;
    }

    #commentform.wp-review-comment-form .wp-review-comment-form-rating {
      margin-bottom: .4rem;
    }

    #commentform.wp-review-comment-form .wp-review-comment-form-rating label {
      line-height: 1.5;
    }

    #commentform.wp-review-comment-form .wp-review-comment-form-email {
      margin-bottom: 1em;
    }

    #commentform.wp-review-comment-form .wp-review-comment-form-url {
      display: none;
    }

  #sponsored_product_updates {
    background-color: #fff;
    border-radius: .2rem;
    border-top: .7rem solid #ffffa0;
    box-shadow:
      0 0 0 .1rem #ddd,
      .1rem .1rem .3rem rgba(0, 0, 0, 0.2)
    ;
    display: block;
    margin-bottom: 1rem;
    padding: 2rem;
    position: relative;
		text-decoration: none;
	}

    .page #sponsored_product_updates {
      margin-bottom: 3rem;
    }

    #sponsored_product_updates ul {
      list-style: none;
      margin: 0;
    }

      #sponsored_product_updates li {
        font-size: 1.8rem;
        line-height: 1.5;
        margin-top: 0;
      }

        #sponsored_product_updates a {
          color: #c00;
          text-decoration: none;
        }

        #sponsored_product_updates a:hover,
        #sponsored_product_updates a:focus {
          color: #a00;
          text-decoration: none;
        }

    #sponsored_product_updates .product_updates_heading,
    #sponsored_product_updates h2 {
      color: #666;
      font-size: 1.4rem;
      font-weight: bold;
      line-height: 1.5;
      margin-bottom: .5em;
      text-transform: uppercase;
    }

    #sponsored_product_updates .product_updates_heading:before,
    #sponsored_product_updates h2:before {
      content: '\f420';
      display: inline-block;
      -moz-osx-font-smoothing: grayscale;
      -webkit-font-smoothing: antialiased;
      font: normal 1.4rem/1.5 Genericons;
      margin-right: .25em;
      speak: none;
      vertical-align: top;
    }


	/*------------------------------
	Posts
	------------------------------*/

	.comments:before {
		content: '\f300';
		display: inline-block;
		-webkit-font-smoothing: antialiased;
		font: normal 1.6rem/1 'Genericons';
		margin-right: .1em;
    speak: none;
    vertical-align: text-top;
	}

  .post_body {
    margin-bottom: 4rem;
  }

    @media only screen and ( max-width: 499px ) {

      .post_body {
        margin: 0 auto;
      }

    }

  .single .category-blog-posts .headline_postmeta {
    min-height: 10rem;
  }

    .single .category-blog-posts .author_avatar {
      float: left;
    }

      .single .category-blog-posts .author_avatar img {
        margin: 0;
      }

    .single .category-blog-posts .headline,
    .single .category-blog-posts .headline_postmeta .postmeta {
      padding-left: 11.5rem;
    }

  #toc_container {
    margin-bottom: 3rem;
  }

    .toc_title {
      font-size: 3.2rem;
      line-height: 1.2;
    	margin-bottom: .5em;
    }

    #toc_container > ul {
			margin-left:0;
		}

    #toc_container ul {
			list-style: none;
		}

      #toc_container ul ul {
        margin-bottom: 0;
        margin-left: 1.5rem;
      }

    #toc_container li {
			margin: 0 0 .5rem 0;
		}

    #toc_container li li:first-child {
      margin-top: .5rem;
    }
/* ... */

